# autosubst-test

./: CHANGELOG.md  Confluence.cabal  LICENSE
app/: Main.hs
