cabal-version:      3.0
name:               Confluence
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koen Claessen
maintainer:         koen@chalmers.se
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Confluence
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0, QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
